force-app/main/default/objects/City__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>