force-app/main/default/objects/City__c/fields/Total_Trees__c.field-meta.xml
<CustomField>
    <fullName>Total_Trees__c</fullName>
    <label>Total Trees</label>
    <summaryForeignKey>Tree_Plantation__c.Planted_In__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>